# automatic-differentiation

./: CMakeLists.txt  Doxyfile.in  README.org
autodiff/: CMakeLists.txt  autodiff.hpp  config.hpp.in  derivatives.hpp  dual.hpp  functions.hpp  import.hpp  irrational.hpp  value.hpp
autodiff_testing/: CMakeLists.txt  dual_test.cpp  irrational_test.cpp  test_macros.hpp
